--- a/index.css
+++ b/index.css
@@ -5,6 +5,12 @@
 .important{
 	font-size:50px;
 } 
+a:link {text-decoration: none} 
+
+}
 h2 {
 	color:navy;
 }
+div {
+	text-decoration: remove underline; }
+.round {border-radius: 25px;}
