--- a/index.css
+++ b/index.css
@@ -5,12 +5,14 @@
 .important{
 	font-size:50px;
 } 
-a:link {text-decoration: none} 
 
-}
 h2 {
 	color:navy;
 }
 div {
-	text-decoration: remove underline; }
+	text-decoration: remove underline; 
+padding:10px;}
 .round {border-radius: 25px;}
+.done { 
+	text-decoration: none
+}
