--- a/index.css
+++ b/index.css
@@ -11,10 +11,11 @@ h2 {
 }
 div {
 	text-decoration: remove underline; 
-	padding top:10px
-padding right:10px
-padding bottom:10px
-padding left:0px;
+	padding-top:10px;
+	padding-right:10px;
+	padding-bottom:10px;
+	padding-left:0px;
+	margin-bottom: 10px;
 }
 .round {border-radius: 25px;}
 .done { 
