--- a/index.css
+++ b/index.css
@@ -4,9 +4,8 @@
 
 .important{
 	font-size:50px;
-	font-style:italic;
-} 
 
+}
 h2 {
 	color:navy;
 }
@@ -21,5 +20,12 @@ div {
 .round {border-radius: 25px;}
 .done { 
 	text-decoration: none;
-
+}
+body {
+	font-family: Comic Sans;
+	padding-right: :10px;
+	margin-bottom:10px;
+	padding-top:10px;
+	padding-left:0px;
+	font-family:'Roboto', sans-serif;;
 }
