--- a/index.css
+++ b/index.css
@@ -17,6 +17,10 @@ div {
 	padding-bottom:10px;
 	padding-left:0px;
 	margin-bottom: 10px;
+
+}
+a:hover {
+	color:pink;
 }
 
 .round {border-radius: 25px;}
@@ -36,4 +40,7 @@ body {
 
 #header {
 	border-bottom: 2px solid navy;
+}
+
+
 }
